--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "codemirror-lang-EXAMPLE",
+  "name": "codemirror-lang-mustache",
   "version": "0.1.0",
-  "description": "EXAMPLE language support for CodeMirror",
+  "description": "Mustache language support for CodeMirror",
+  "license": "MIT",
   "scripts": {
     "test": "mocha test/test.js",
     "prepare": "rollup -c"
@@ -16,17 +17,21 @@
   "types": "dist/index.d.ts",
   "sideEffects": false,
   "dependencies": {
-    "@codemirror/language": "^6.0.0",
-    "@lezer/highlight": "^1.0.0",
-    "@lezer/lr": "^1.0.0"
+    "@codemirror/language": "^6.8.0",
+    "@lezer/highlight": "^1.1.6",
+    "@lezer/lr": "^1.3.6"
   },
   "devDependencies": {
-    "@lezer/generator": "^1.0.0",
-    "mocha": "^9.0.1",
-    "rollup": "^2.60.2",
-    "rollup-plugin-dts": "^4.0.1",
-    "rollup-plugin-ts": "^3.0.2",
-    "typescript": "^4.3.4"
+    "@lezer/generator": "^1.3.0",
+    "mocha": "^10.2.0",
+    "rollup": "^3.25.1",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-ts": "^3.2.0",
+    "typescript": "^5.1.3"
   },
-  "license": "MIT"
+  "prettier": {
+    "singleQuote": true,
+    "printWidth": 100,
+    "trailingComma": "all"
+  }
 }
