--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "emailjs-com"
   ],
   "dependencies": {
-    "@codemirror/language": "^6.8.0",
-    "@lezer/highlight": "^1.1.6",
-    "@lezer/lr": "^1.3.7"
+    "@codemirror/language": "^6.10.3",
+    "@lezer/highlight": "^1.2.1",
+    "@lezer/lr": "^1.4.2"
   },
   "devDependencies": {
-    "@lezer/generator": "^1.3.0",
-    "mocha": "^10.2.0",
-    "rollup": "^3.25.1",
-    "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-ts": "^3.2.0",
-    "typescript": "^5.1.3"
+    "@lezer/generator": "^1.7.1",
+    "@rollup/plugin-typescript": "^12.1.0",
+    "mocha": "^10.7.3",
+    "rollup": "^4.24.0",
+    "rollup-plugin-dts": "^6.1.1",
+    "typescript": "^5.6.2"
   },
   "prettier": {
     "singleQuote": true,
